[gd_scene load_steps=9 format=3 uid="uid://c67nqiopby4yt"]

[ext_resource type="Shader" path="res://shader/spatial/solid_0_transparent.gdshader" id="1_a1dmh"]
[ext_resource type="Script" path="res://script/object/interactive/level/height-bed.gd" id="1_c4bip"]
[ext_resource type="Shader" path="res://shader/spatial/psx_unlit_sprite.gdshader" id="2_aqm6v"]
[ext_resource type="Texture2D" uid="uid://xj3h3m7xe531" path="res://asset/2d/sprite/player/guardian.png" id="3_g1v1g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j21mq"]

[sub_resource type="BoxMesh" id="BoxMesh_vm5i8"]
flip_faces = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4gf5o"]
render_priority = 0
shader = ExtResource("1_a1dmh")
shader_parameter/MAIN_COLOR = Color(0, 0, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cr0ds"]
render_priority = 0
shader = ExtResource("2_aqm6v")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(1, 0, 1, 1)
shader_parameter/alpha_color = Color(1, 0, 1, 1)
shader_parameter/use_blend = false
shader_parameter/albedoTex = ExtResource("3_g1v1g")
shader_parameter/billboard = true
shader_parameter/y_billboard = false
shader_parameter/animate = null
shader_parameter/animation_frames = null
shader_parameter/animation_speed = null
shader_parameter/per_quad_depth = false
shader_parameter/adjustable_depth = false
shader_parameter/depth_offset = null

[node name="HeightBed" type="Area3D"]
script = ExtResource("1_c4bip")

[node name="ZoneCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_j21mq")

[node name="ZoneMesh" type="MeshInstance3D" parent="ZoneCollision"]
mesh = SubResource("BoxMesh_vm5i8")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_4gf5o")

[node name="Height" type="Sprite3D" parent="."]
unique_name_in_owner = true
material_override = SubResource("ShaderMaterial_cr0ds")
offset = Vector2(0, 32)
pixel_size = 0.03
texture = ExtResource("3_g1v1g")
hframes = 5
vframes = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
